name: workshop
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , reflex-dom
               , text
               , reflex
               , errors >= 2.2 && < 2.4
               , mtl
               , bytestring
               , aeson
               , filepath
               , containers
               , lens
               , uri-bytestring
               , ref-tf
               , exception-transformers
               , dependent-sum
               , dependent-map
               , ghcjs-dom
               , jsaddle
               , reflex-dom-contrib
               , reflex-dom-nested-routing
               , reflex-dom-storage
               , reflex-dom-template
               , jsaddle-warp
               , wai-app-static
  exposed-modules:
      Run
  other-modules:
      State
    , State.Exercise
    , Types.Demonstration
    , Types.Exercise
    , Types.RouteFragment
    , Types.Section
    , Types.Interactivity
    , UI
    , UI.Base
    , UI.Demonstration
    , UI.Exercise
    , UI.Menu
    , UI.Routing
    , UI.Section
    , Util.Bootstrap
    , Util.Scroll
    , Util.Template
    , Workshop
    , Workshop.Events
    , Workshop.Events.Transforming
    , Workshop.Events.Transforming.Fmap
    , Exercises.Events.Transforming.Fmap
    , Solutions.Events.Transforming.Fmap
    , Workshop.Events.Transforming.FmapConst
    , Exercises.Events.Transforming.FmapConst
    , Solutions.Events.Transforming.FmapConst
    , Workshop.Events.Filtering
    , Workshop.Events.Filtering.Ffilter
    , Exercises.Events.Filtering.Ffilter
    , Solutions.Events.Filtering.Ffilter
    , Workshop.Events.Filtering.FmapMaybe
    , Exercises.Events.Filtering.FmapMaybe
    , Solutions.Events.Filtering.FmapMaybe
    , Workshop.Events.Combining
    , Workshop.Events.Combining.MergeWith
    , Exercises.Events.Combining.MergeWith
    , Solutions.Events.Combining.MergeWith
    , Workshop.Events.Combining.Leftmost
    , Exercises.Events.Combining.Leftmost
    , Solutions.Events.Combining.Leftmost
    , Workshop.Behaviors
    , Workshop.Behaviors.Instances
    , Workshop.Behaviors.Instances.Fmap
    , Exercises.Behaviors.Instances.Fmap
    , Solutions.Behaviors.Instances.Fmap
    , Workshop.Behaviors.Instances.Apply
    , Exercises.Behaviors.Instances.Apply
    , Solutions.Behaviors.Instances.Apply
    , Workshop.Behaviors.Querying
    , Workshop.Behaviors.Querying.Tag
    , Exercises.Behaviors.Querying.Tag
    , Solutions.Behaviors.Querying.Tag
    , Workshop.Behaviors.Querying.Counter
    , Exercises.Behaviors.Querying.Counter
    , Solutions.Behaviors.Querying.Counter
    , Workshop.Behaviors.Querying.CounterText
    , Exercises.Behaviors.Querying.CounterText
    , Solutions.Behaviors.Querying.CounterText
    , Workshop.Behaviors.Querying.Limit
    , Exercises.Behaviors.Querying.Limit
    , Solutions.Behaviors.Querying.Limit
    , Workshop.Behaviors.Creating
    , Workshop.Behaviors.Creating.Fmap
    , Exercises.Behaviors.Creating.Fmap
    , Solutions.Behaviors.Creating.Fmap
    , Workshop.Behaviors.Creating.Apply
    , Exercises.Behaviors.Creating.Apply
    , Solutions.Behaviors.Creating.Apply
    , Workshop.Behaviors.Creating.Counter
    , Exercises.Behaviors.Creating.Counter
    , Solutions.Behaviors.Creating.Counter
    , Workshop.Behaviors.Creating.Limit
    , Exercises.Behaviors.Creating.Limit
    , Solutions.Behaviors.Creating.Limit
    , Workshop.Behaviors.Creating.Text
    , Exercises.Behaviors.Creating.Text
    , Solutions.Behaviors.Creating.Text
    , Workshop.Behaviors.Dynamics
    , Workshop.Behaviors.Dynamics.Counter
    , Exercises.Behaviors.Dynamics.Counter
    , Solutions.Behaviors.Dynamics.Counter
    , Workshop.Behaviors.Dynamics.Unique
    , Exercises.Behaviors.Dynamics.Unique
    , Solutions.Behaviors.Dynamics.Unique
    , Workshop.Behaviors.Components
    , Workshop.DOM
    , Workshop.DOM.Elements
    , Workshop.DOM.Elements.Text
    , Exercises.DOM.Elements.Text
    , Solutions.DOM.Elements.Text
    , Workshop.DOM.Elements.Class
    , Exercises.DOM.Elements.Class
    , Solutions.DOM.Elements.Class
    , Workshop.DOM.Elements.Attributes
    , Exercises.DOM.Elements.Attributes
    , Solutions.DOM.Elements.Attributes
    , Workshop.DOM.Elements.Events
    , Exercises.DOM.Elements.Events
    , Solutions.DOM.Elements.Events
    , Workshop.DOM.Elements.Button
    , Exercises.DOM.Elements.Button
    , Solutions.DOM.Elements.Button
    , Workshop.DOM.Elements.Todo
    , Workshop.DOM.Inputs
    , Workshop.DOM.Inputs.Checkbox
    , Workshop.DOM.Inputs.TextInput
    , Workshop.DOM.Switching
    , Workshop.DOM.Switching.HigherOrder
    , Exercises.DOM.Switching.HigherOrder
    , Solutions.DOM.Switching.HigherOrder
    , Workshop.DOM.Switching.WidgetHold
    , Exercises.DOM.Switching.WidgetHold
    , Solutions.DOM.Switching.WidgetHold
    , Workshop.DOM.Switching.Workflow
    , Exercises.DOM.Switching.Workflow
    , Solutions.DOM.Switching.Workflow
    , Workshop.DOM.Switching.Todo
    , Workshop.Collections
    , Workshop.Collections.Displaying
    , Workshop.Collections.Adding
    , Workshop.Collections.Removing
    , Workshop.Collections.Model
    , Workshop.Collections.EventWriter
    , Workshop.Collections.EventWriter.Removing
    , Common.Todo
    , Exercises.Todo.Item
    , Exercises.Todo.List
    , Solutions.Todo.DOM.Elements.Item
    , Solutions.Todo.DOM.Inputs.Checkbox.Item
    , Solutions.Todo.DOM.Inputs.TextInput.Item
    , Solutions.Todo.DOM.Switching.Item
    , Solutions.Todo.Collections.Displaying.Item
    , Solutions.Todo.Collections.Displaying.List
    , Solutions.Todo.Collections.Adding.Item
    , Solutions.Todo.Collections.Adding.List
    , Solutions.Todo.Collections.Removing.Item
    , Solutions.Todo.Collections.Removing.List
    , Solutions.Todo.Collections.Model.Item
    , Solutions.Todo.Collections.Model.List
    , Solutions.Todo.Collections.EventWriter.Removing.Item
    , Solutions.Todo.Collections.EventWriter.Removing.List
  ghc-options: -Wall
  if impl(ghcjs -any)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER

