name:                reflex-workshop
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Workshop.Demo.Problems.Toggle.Exercise
                     , Workshop.Demo.Problems.Toggle.Solution
                     , Workshop.Demo.Problems.Toggle
                     , Workshop.Demo
                     , Workshop
                     , Util.Run
                     , Util.Section
                     , Util.Exercises
                     , Util.File
                     , Util.Bootstrap
                     , Util.WorkshopState
                     , Util.UI
                     , Util.Log.Common
                     , Util.Log.Client
                     , Util.Log.Server
  build-depends:       base >=4.9 && <4.12
                     , aeson >= 1.2 && < 1.3
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , directory >=1.3 && <1.4
                     , errors >= 2.2 && < 2.3
                     , filepath >=1.4 && <1.5
                     , ghcjs-dom >= 0.9 && < 0.10
                     , hashable >= 1.2 && < 1.3
                     , http-api-data >= 0.3 && < 0.4
                     , http-types >= 0.9 && < 0.10
                     , jsaddle >= 0.9 && < 0.10
                     , jsaddle-warp >= 0.9 && < 0.10
                     , lens >= 4.15 && < 4.16
                     , mtl >= 2.2 && < 2.3
                     , pandoc >= 1.19 && < 1.20
                     , reflex >= 0.5 && < 0.6
                     , reflex-basic-host >= 0.1 && < 0.2
                     , reflex-dom-core >= 0.4 && < 0.5
                     , reflex-model >= 0.1.0 && < 0.2
                     , reflex-server-servant >= 0.1 && < 0.2
                     , reflex-server-wai >= 0.1.0 && < 0.2
                     , servant >= 0.11 && < 0.12
                     , servant-reflex >= 0.3 && < 0.4
                     , servant-server >= 0.11 && < 0.12
                     , stm >= 2.4 && < 2.5
                     , text >= 1.2 && < 1.3
                     , time >= 1.6 && < 1.7
                     , transformers >= 0.5 && < 0.6
                     , ttrie >= 0.1 && < 0.2
                     , wai >= 3.2 && < 3.3
                     , wai-app-static >= 3.1 && < 3.2
                     , wai-middleware-static >= 0.8 && < 0.9
                     , warp >= 3.2 && < 3.3
                     , websockets >= 0.10&& < 0.11
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
